Bug 499462 - Auto Frame Mode Autokey Blank does not work correctly with fill tool
Summary: Auto Frame Mode Autokey Blank does not work correctly with fill tool
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.2.6
Platform: NixOS Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-03 15:00 UTC by cromachina
Modified: 2025-04-02 02:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cromachina 2025-02-03 15:00:13 UTC
SUMMARY
Using fill tool with "Autokey Blank" instead produces behavior like "Autokey Duplicate". I encountered this when trying to fill in shadow cels in an animation, when flooding with the "merged layers" setting.

STEPS TO REPRODUCE
1. Create a new document and add a blank frame to frame 0.
2. Draw something on frame 0.
3. Enable Auto Frame Mode -> Autokey Blank.
4. Switch to frame 1.
5. Switch to the fill tool. Settings:
  -Fill mode: Fill a contiguous region
  -Fill source: Foreground color
  -Use custom blending options: Normal
  -Reference: Merged layers
6. Change to a different foreground color.
7. Fill in frame 1.

OBSERVED RESULT
The resulting fill takes into consideration the previous frame's contents in this layer, as if the "Auto Frame Mode" was set to "Autokey Duplicate".

EXPECTED RESULT
A new blank frame should have been created first, and then the fill should have run after that. In this situation, the entire canvas should have been filled.

WORKAROUND
Manually create blank frames before using the fill tool.

SOFTWARE/OS VERSIONS
Operating System: NixOS 25.05
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1
Kernel Version: 6.6.71 (64-bit)
Graphics Platform: X11
Processors: 24 × AMD Ryzen 9 3900X 12-Core Processor
Memory: 62.7 GiB of RAM
Graphics Processor: AMD Radeon RX 7900 XTX
Comment 1 Emmet O'Neill 2025-04-02 01:56:14 UTC
Confirming this. Thanks for the report, cromachina.
Comment 2 Emmet O'Neill 2025-04-02 02:37:10 UTC
Git commit 78c363fb4c5bf91a21a7f093453cbe6c2b0968cb by Emmet O'Neill.
Committed on 02/04/2025 at 02:37.
Pushed by emmetoneill into branch 'master'.

Animation: Added AutoKey:BLANK support to Fill Tool.

When BLANK is enabled, filling a new frame will fill the entire canvas
as expected. When DUPLICATE mode is enabled, the contents of the previous
frame will be duplicated and the fill will happen in that context.

M  +1    -1    libs/ui/processing/fill_processing_visitor.cpp

https://invent.kde.org/graphics/krita/-/commit/78c363fb4c5bf91a21a7f093453cbe6c2b0968cb