Animation: Added AutoKey:BLANK support to Fill Tool.

When BLANK is enabled, filling a new frame will fill the entire canvas
as expected. When DUPLICATE mode is enabled, the contents of the previous
frame will be duplicated and the fill will happen in that context.

BUG:499462